feat: if no deviceToken field, generate it on signup endpoint
