# docs/swagger.yaml
@@ -157,7 +157,9 @@ paths:
     post:
       consumes:
       - application/json
-      description: 회원가입
+      description: |-
+        회원가입
+        - deviceToken 필드를 넣어주지 않으면 자동으로 생성된다. 만약 필드가 있다면 해당 값으로 생성한다.
       parameters:
       - description: sign up body
         in: body
@@ -171,7 +173,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/controller.BaseResponse'
+            $ref: '#/definitions/controller.MemberResponse'
         "409":
           description: Account already exist
         "500":
